<resources>
    <string name="app_name">EasyFestas</string>
    <string name="action_settings">Settings</string>
    
    <string name="beaf">Carne</string>
    <string name="coal">Carvão</string>
    <string name="ice">Gelo</string>
    <string name="soda">Refrigerante</string>
    <string name="beer">Cerveja</string>
    <string name="your_location">Sua localização:</string>
    <string name="location">Av. Júlio de Mesquita, 115 - Cambuí, Campinas, São Paulo</string>

    <string name="localizacao_mercados">Lista de mercados:</string>
    <string name="label_button_convidar">Convidar</string>
    <string name="hint_button_convidar">Envie um e-mail com a lista de produtos para seus convidados</string>
</resources>
