<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context="com.pluzone.easyfestas.easyfestas.MainActivity">

    <TextView
        android:id="@+id/locationText1"
        android:text="@string/your_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/locationText2"
        android:text="@string/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/locationText1"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/locationText"
        android:text="@string/localizacao_mercados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/locationText2"/>

    <RadioGroup
        android:id="@+id/radios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/locationText"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/yourbuttonbackground"
            android:button="@android:color/transparent"
            android:checked="true"
            android:text="Preço" />

        <RadioButton
            android:id="@+id/radioDistancia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/yourbuttonbackground"
            android:button="@android:color/transparent"
            android:checked="false"
            android:text="Distância" />
    </RadioGroup>

    <ListView
        android:id="@+id/list"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/radios">
    </ListView>


    <View
        android:id="@+id/line_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@id/list"/>

    <Button
        android:id="@+id/button_convidar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_button_convidar"
        android:hint="@string/hint_button_convidar"
        android:layout_below="@id/line_separator"/>

</RelativeLayout>
